adicao de comando docker

--- a/ajusteestoque/README
+++ b/ajusteestoque/README
@@ -1,3 +1,2 @@
-O algoritmo de criptografia de senha do banco não é compativel com a decriptografia das funções de verificação...
+O algoritmo de criptografia de senha do banco não é compativel com a descriptografia das funções de verificação...
 Usar a criptografia gerada em: https://bcrypt-generator.com/
-ou usar a senha 123 = $2a$12$SJLrTZ2oNztX0Q0tbGpi9eTSBnbE/iaHS4vANMLNu40iII5TOhKD2
