--- a/ajusteestoque/README
+++ b/ajusteestoque/README
@@ -1,10 +1,2 @@
-Criar um diretorio em "D:\postgres".
-Executar o comando "docker-compose up -d" no terminal da aplicação.
-
-Passos para iniciar a população das tabelas do banco
-Recomendável seguir os sripts sugeridos para iniciar usuários no banco...
-Ao utilizar algum software para teste das APIs, como Postman, seguir os objetosTeste sugeridos...
-
 O algoritmo de criptografia de senha do banco não é compativel com a descriptografia das funções de verificação...
-Usar a criptografia gerada em: https://bcrypt-generator.com/ ou seguir os script .txt
-
+Usar a criptografia gerada em: https://bcrypt-generator.com/ ou seguir os scripts .txt
